# chimera

./: .gitignore  Cargo.toml  README.md
chimera-aop/: Cargo.toml
chimera-aop-macros/: Cargo.toml
chimera-aop-macros/src/: aop_method.rs  aspect.rs  lib.rs  utils.rs
chimera-aop/src/: advice.rs  aspect.rs  bean_post_processor.rs  error_info.rs  joinpoint.rs  lib.rs  plugin.rs  pointcut.rs  registry.rs
chimera-core/: Cargo.toml
chimera-core-macros/: Cargo.toml
chimera-core-macros/src/: attribute_helpers.rs  bean_factory_post_processor_impl.rs  bean_impl.rs  bean_post_processor_impl.rs  component_attr.rs  component_impl.rs  config_properties_impl.rs  configuration_attr.rs  configuration_impl.rs  lib.rs  smart_initializing_singleton_impl.rs  value_injection.rs
chimera-core/src/: app.rs  bean.rs  bean_factory.rs  bean_post_processor.rs  component.rs  config.rs  constants.rs  container.rs  context.rs  error.rs  event.rs  lib.rs  lifecycle.rs  logging.rs  plugin.rs  scope.rs  utils.rs
chimera-macros/: Cargo.toml
chimera-macros/src/: component_impl.rs  config_properties_impl.rs  lib.rs  value_injection.rs
chimera-validator/: Cargo.toml
chimera-validator-macros/: Cargo.toml
chimera-validator-macros/src/: lib.rs
chimera-validator/src/: error.rs  lib.rs  plugin.rs  validator.rs
chimera-web/: Cargo.toml
chimera-web-macros/: Cargo.toml
chimera-web-macros/src/: controller.rs  exception_handler.rs  from_multipart.rs  handler_interceptor.rs  lib.rs  route.rs  utils.rs
chimera-web/src/: constants.rs  controller.rs  exception_handler.rs  exception_handler_registry.rs  extractors.rs  interceptor.rs  interceptor_registry.rs  lib.rs  middleware.rs  multipart.rs  plugin.rs  server.rs  template.rs  validators.rs
docs/: LOGGING.md
examples/: README.md
examples/app-demo/: Cargo.toml  application-dev.toml  application.toml
examples/app-demo/config/: application.toml
examples/app-demo/src/: main.rs
examples/web-demo/: Cargo.toml  README.md  application.toml
examples/web-demo/config/: application.toml
examples/web-demo/src/: aspects.rs  bean_config.rs  config.rs  error.rs  main.rs  models.rs
examples/web-demo/src/aspects/: logging_aspect.rs
examples/web-demo/src/controller/: aop_controller.rs  api_controller.rs  auth_controller.rs  controllers.rs  demo_controller.rs  mod.rs  template_controller.rs  test_bean_controller.rs  test_controller.rs  upload_controller.rs  user_controller.rs  validation_controller.rs
examples/web-demo/src/handlers/: exception_handlers.rs
examples/web-demo/src/interceptors/: handler_interceptors.rs
examples/web-demo/src/processors/: custom_bean_factory_post_processor.rs  lifecycle_test_processor.rs  logging_bean_post_processor.rs  mod.rs  timing_bean_post_processor.rs
examples/web-demo/src/service/: mod.rs  services.rs  startup_service.rs  user_service.rs
examples/web-demo/templates/: about.html  conditional.html  error.html  form.html  index.html  nested.html  user_detail.html  users.html
