[workspace]
resolver = "2"
members = [
    "chimera-core",
    "chimera-core-macros",
    "chimera-web",
    "chimera-web-macros",
    "chimera-validator",
    "chimera-validator-macros",
    "examples/app-demo",
    "examples/web-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chimera Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hoowhoami/chimera"

[workspace.dependencies]
# 依赖注入相关
chimera-core = { path = "chimera-core" }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# 工具库
anyhow = "1.0"
thiserror = "2.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
