[package]
name = "chimera-aop-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Chimera AOP"

[lib]
proc-macro = true

[dependencies]
# 过程宏相关
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# 工具库
thiserror = { workspace = true }

[dev-dependencies]
