[package]
name = "chimera-aop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AOP (Aspect-Oriented Programming) support for Chimera framework"

[dependencies]
# Chimera 核心
chimera-core = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 序列化
serde = { workspace = true }

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.19"

# 日志
tracing = { workspace = true }

# 异步trait
async-trait = "0.1"

# 编译时注册
inventory = "0.3"

# 正则表达式（用于切点表达式）
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full"] }
tracing-subscriber = "0.3"
chimera-aop-macros = { path = "../chimera-aop-macros" }
