[package]
name = "chimera-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
chimera-core = { path = "../chimera-core" }
chimera-validator-macros = { path = "../chimera-validator-macros" }
thiserror = "2"
regex = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
