[package]
name = "chimera-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Chimera 核心
chimera-core = { workspace = true }
validator = { version = "0.18", features = ["derive"] }

# Web 框架 - Axum
axum = "0.7"
multer = "3.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }

# Async runtime
tokio = { workspace = true }
futures-util = "0.3"
bytes = "1.0"

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
hyper = "1.0"
http = "1.0"

# 工具库
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.10"

# 日志
tracing = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["v4"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 模板引擎
tera = "1.20"
notify = "6.1"

# 异步trait
async-trait = "0.1"

# 编译时注册
inventory = "0.3"

[dev-dependencies]
tokio = { workspace = true }
