[package]
name = "web-demo"
version.workspace = true
edition.workspace = true

[dependencies]
chimera-core = { workspace = true }
chimera-core-macros = { path = "../../chimera-core-macros" }
chimera-web = { path = "../../chimera-web" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
inventory = "0.3"
