[package]
name = "web-demo"
version.workspace = true
edition.workspace = true

[dependencies]
chimera-core = { workspace = true }
chimera-core-macros = { path = "../../chimera-core-macros" }
chimera-web = { path = "../../chimera-web" }
chimera-web-macros = { path = "../../chimera-web-macros" }
chimera-validator = { path = "../../chimera-validator" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
inventory = "0.3"
chrono = "0.4"
regex = "1.10"
axum = "0.7"
async-trait = "0.1"
